force-app/main/default/objects/LLC_BI__Funding_Method__c/LLC_BI__Funding_Method__c.object-meta.xml
<CustomObject>
    <label>Funding Method</label>
    <nameField>
        <label>Funding Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>