force-app/main/default/objects/LLC_BI__Funding_Method__c/fields/cm_Account_Number_Confirm__c.field-meta.xml
<CustomField>
    <fullName>cm_Account_Number_Confirm__c</fullName>
    <label>Account Number (Confirm)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>