force-app/main/default/objects/LLC_BI__Funding_Method__c/fields/cm_Routing_Number_confirm__c.field-meta.xml
<CustomField>
    <fullName>cm_Routing_Number_confirm__c</fullName>
    <label>Routing Number (confirm)</label>
    <length>16</length>
    <type>Text</type>
</CustomField>