force-app/main/default/objects/LLC_BI__Funding_Method__c/fields/LLC_BI__Funding_Completion_ID__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Funding_Completion_ID__c</fullName>
    <description>This text field autopopulates with an ID that is used to verify vendor details for funding transaction.</description>
    <label>Funding Completion ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>