force-app/main/default/objects/LLC_BI__Funding_Method__c/fields/LLC_BI__Funding_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Funding_Status__c</fullName>
    <description>This picklist field autopopulates with the current funding status, used to track the progress of deposit account funding.</description>
    <label>Funding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Awaiting Trial Deposits</fullName>
            </value>
            <value>
                <fullName>Trial Deposit Failure</fullName>
            </value>
            <value>
                <fullName>Trial Deposit Success</fullName>
            </value>
            <value>
                <fullName>Trial Deposit Reject</fullName>
            </value>
            <value>
                <fullName>Funding Success</fullName>
            </value>
            <value>
                <fullName>Funding Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>