force-app/main/default/objects/LLC_BI__Funding_Method__c/fields/LLC_BI__Funding_Target_ID__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Funding_Target_ID__c</fullName>
    <description>This text field autopopulates with the ID of the institution using the funding integration.</description>
    <label>Funding Target ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>