force-app/main/default/objects/LLC_BI__Funding_Method__c/fields/LLC_BI__Funding_User_ID__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Funding_User_ID__c</fullName>
    <description>This text field autopopulates with the User ID of the user of the funding integration.</description>
    <label>Funding User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>